fix(security): switch jwt delivery from localstorage to httponly secure cookies
- Deliver JWT via httpOnly Secure SameSite=Strict cookie on login/register
- Extract JWT from cookies in JwtAuthenticationFilter instead of Authorization header
- Remove token from Zustand localStorage persistence
- Switch axios from header-based to cookie-based auth
- Add logout endpoint with JWT cookie invalidation
- Reduce JWT expiration to 15 minutes and add refresh token endpoint